# Hello-worlod

./: .gitignore  langchain-course.code-workspace
AI search Agent/: .env.example  .gitignore  PLAN.md  README.md  agent.py  ai_web_search_agent_4e9313d6.plan.md  app.py  cli.py  main.py  requirements.txt
Building a documentation assistant/: README.md  app.py  app_aws.py  ingestion.py  ingestion_aws.py  logger.py  requirements.txt  retriever.py  retriever_aws.py
Hello world/: README.md  main.py
RAG Tutorial with LangChain/: .gitignore  ingestion.py  requirements.txt
RAG Tutorial with LangChain/docs/: sample.txt
RAG Tutorial with LangChain/ingestion_backend/: README.md  pyproject.toml
RAG Tutorial with LangChain/ingestion_backend/ingestion_backend/: __init__.py  agent.py  docsearch_agent.py  ingestion.py  retrieval.py  server.py
RAG Tutorial with LangChain_2/ui/: .env.example  .gitignore  README.md  package.json
RAG Tutorial with LangChain_2/ui/app/: ClientProviders.tsx  CopilotProvider.tsx  layout.tsx  page.tsx
RAG Tutorial with LangChain_2/ui/app/api/copilotkit/: route.ts
ReAct LangChain/: .env
langchain-course-project-agents-under-the-hood/langchain-course-project-agents-under-the-hood/: 1_agent_loop_langchain_tool_calling.py  2_agent_loop_raw_function_calling.py  3_agent_loop_langgraph.py  calc_weather_assistant.py  function_tool.py  main.py  prompot.txt  pyproject.toml
